# cadence

./: .gitignore  AGENTS.md  CLOUD_STORAGE.md  Cargo.toml  LICENSE  README.md  TEST_GUIDE.md
.cargo/: config.toml
.claude/state/: active_task.json  active_task.md  activity.jsonl
docs/: acceptance-run-2026-04-01.md  acceptance.md  architecture.md  debug-observability.md  epic.md  plan.md  prd.md  requirements.md  tasks.md  ui-spec.md  ui-validation-2026-04-01.md  ui-wireframe.html
docs/superpowers/plans/: 2026-04-03-controlled-online-source-mvp.md
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo  vite.config.js  vitest.config.ts
frontend/src/: App.css  App.tsx  main.tsx  opencc-js.d.ts  types.ts
frontend/src/components/: ContextMenu.tsx  FullPlayer.tsx  LyricsPanel.tsx  OnlineSourcePanel.tsx  PlaybackBar.tsx  SettingsPanel.tsx  SettingsView.tsx  SplashScreen.tsx  UploadHistoryPanel.tsx
frontend/src/hooks/: useAudio.ts  useCloudStorage.ts  useLyrics.ts  useSimplify.ts
frontend/src/online/: catalog.ts  controlledCatalogProvider.ts  download.ts  favorites.ts  lxScriptContract.ts  lxSourceEngine.ts  musicSearch.ts  sourceConfig.ts  types.ts
frontend/src/utils/: runtimeLog.ts
r2_music_test/: .env.example  Cargo.toml  batch_upload.sh  upload_real_mp3.rs
r2_music_test/src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: downloader.rs  lib.rs  main.rs  model.rs  online_store.rs  scanner.rs  source_config_store.rs
(+11 files in other folders)
