[package]
name = "tips"
version = "0.1.0"
edition = "2021"

[lib]
name = "tips_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2.5"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
dotenvy = "0.15"
scopeguard = "1.2"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots"] }
id3 = "1"
mp3-duration = "0.1"

[dev-dependencies]
tempfile = "3.15"
